--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "nodemailer": "^6.8.0"
   },
   "scripts": {
-    "star": "node server.js",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "name": "backend-portafolio",
   "description": "portafolio",
