--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemailer": "^6.8.0"
+    "netlify-cli": "^2.12.0",
+    "netlify-lambda": "^2.0.15",
+    "nodemailer": "^6.8.0",
+    "serverless-http": "^3.1.1"
   },
   "scripts": {
     "start": "node index.js"
@@ -15,7 +18,6 @@
   "engines": {
     "node": "14.x"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Nievas1000/Backend-Portafolio.git"
