--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "name": "backend-portafolio",
   "description": "portafolio",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "14.x"
   },
